# MasterCourse.Compilers

./: .gitignore  CMakeLists.txt
DSA/: dfs.hh  graph.hh  ilist.hh
IR/: CMakeLists.txt  IR.cc  IR.hh  function.cc  function.hh  opcodes.hh
analysis/: CMakeLists.txt  PM.hh  dfs.cc  dfs.hh  domTree.cc  domTree.hh  linearOrder.cc  linearOrder.hh  liveness.cc  liveness.hh  loopAnalyser.hh  regAlloc.hh
docs/: IR.md
include/: IR.hh  PM.hh  basicBlock.hh  dfs.hh  function.hh  ilist.hh  instruction.hh  opcodes.hh  value.hh
passes/: CMakeLists.txt  PM.hh  Visitor.hh  checksElimination.cc  checksElimination.hh  constFolding.cc  constFolding.hh  dce.cc  dce.hh  inline.cc  inline.hh  peepholes.cc  peepholes.hh
src/: CMakeLists.txt  IR.cc  function.cc
tests/unit/: CMakeLists.txt  checksElimination.cc  constFolding.cc  dfs.cc  domTree.cc  graphBuilder.cc  graph_builder.cc  graphs.cc  graphs.hh  inline.cc  linearOrder.cc  liveness.cc  loopTree.cc  peepholes.cc  regAlloc.cc  traversal.cc
